# aws-client

./: Cargo.toml  README.md
src/: lambda.rs  lib.rs  main.rs  s3.rs
