[package]
name = "aws-client"
version = "0.1.0"
authors = ["kkmtyyz <45735463+kkmtyyz@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
aws-config = "0"
aws-types = "0"
aws-sdk-s3 = "0"
aws-sdk-lambda = "0"
tokio = { version = "1", features = ["full"] }
